# python-tbk

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE.txt  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
examples/: README.rst  app.py  normal.py
examples/commerces/: tbk.pem
examples/commerces/597020000545/: 597020000545.key
examples/commerces/597020000546/: 597020000546.key
examples/commerces/597020000593/: 597020000593.crt
examples/commerces/597044444436/: 597044444436.crt  597044444436.key
examples/django_example/: README.rst  manage.py  requirements.txt
examples/django_example/app_tbk/: apps.py  urls.py  views.py
examples/django_example/app_tbk/commerces/597020000542/: 597020000542.crt  597020000542.key
examples/django_example/app_tbk/commerces/597020000545/: 597020000545.crt
examples/django_example/app_tbk/commerces/597020000546/: 597020000546.crt
examples/django_example/app_tbk/commerces/597020000593/: 597020000593.key
examples/django_example/app_tbk/templates/: base_tbk.html
examples/django_example/app_tbk/templates/normal/: failure.html  final.html  index.html  init.html  success.html
examples/django_example/django_example/: settings.py  urls.py  wsgi.py
examples/templates/: base.html
examples/templates/mall/: authorized.html  captured.html  index.html  init.html  refunded.html  released.html  remove.html  return.html  reverse_nullify.html
examples/templates/normal/: failure.html  final.html  index.html  init.html  success.html
examples/templates/oneclick/: authorized.html  index.html  init.html  refunded.html  released.html  return.html
tbk/: __about__.py  __init__.py  capture.py  commerce.py  environments.py  exceptions.py  normal.py  nullify.py  oneclick.py  service.py  services.py  soap_clients.py  suds_client.py  suds_plugin.py  wsse.py  wsse_suds_plugin.py
tbk/soap/: __init__.py  exceptions.py  requestor.py  soap_client.py  soap_clients.py  suds_client.py  utils.py  wsse.py  wsse_suds_plugin.py  zeep_client.py
tests/: conftest.py  test_normal.py  test_oneclick.py  test_oneclick_multicode_service.py  test_oneclick_payment_service.py  test_oneclick_service.py  test_requestor.py  test_services.py  test_webpay_service.py  test_zeep_client.py  utils.py
tests/data/: WsWebpayService.wsdl
tests/fixtures/: WsWebpayService.wsdl  acknowledgeTransaction.response.xml  bare.acknowledgeTransaction.response.xml  initTransaction.request.xml
