[tool.poetry]
name = "python-tbk"
version = "0.2.1"
description = "Unofficial TBK Web Services Python SDK."
authors = "Cornershop"
packages = [ { include = "tbk" } ]
readme = 'README.rst'

[tool.black]
line = 88
skip-numeric-underscore-normalization = true
include = '\.pyi?$'
exclude = '''
/(  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
#include = "tbk/**.py$"

[tool.poetry.dependencies]
zeep = ">=3.0.0"
xmlsec = ">=1.3.3"
requests = ">=2.20.0"
lxml = ">=4.1.1"
typing = {version = "*", markers = "python_version < '3.6'"}
# ipython = "*"

[tool.poetry.scripts]
black = "black:main"
