[tool.poetry]
name = "python-tbk"
version = "0.3.0.dev0"
description = "Unofficial TBK Web Services Python SDK"
license = "MIT"
authors = ["Cornershop <tech@cornershopapp.com>"]
readme = "README.rst"
homepage = "https://github.com/cornershop/python-tbk"
repository = "https://github.com/cornershop/python-tbk"
keywords = ["payments", "python", "transbank", "chile"]
packages = [
    { include = "tbk" }
]
include = ["LICENSE.txt", "README.rst"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.6"
zeep = ">=3.0.0"
xmlsec = ">=0.6.1"
typing = { version = ">=3.6", python = "~2.7"}

[tool.poetry.dev-dependencies]
mock = { version = "*",  python = "~2.7" }
requests_mock = "*"
readme_renderer = "^24.0"
pytest = "=4.6"
pytest-cov = "^2.7"
flask = "^1.1"
python-dotenv = "^0.10.3"
pytest-black = "^0.3.7"
pytest-flakes = "^4.0"
isort = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
